overflow stopped for mini photos on the dashboard page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1609,6 +1609,7 @@
   margin-top: 1%;
   height: 98%;
   outline: 2px solid #E7E6E3;
+  overflow: hidden;
 }
 
 .projectCellMiniImage {
@@ -1620,7 +1621,7 @@
 
 .projectCellMinis {
   height: 50px;
-  width: 100%;
+  width: 300%;
   margin-bottom: 4px;
 }
 
